# api-stub-server/service/DoctorService.js
@@ -9,8 +9,8 @@
  * doctorID String 
  * no response value expected for this operation
  **/
-exports.doctorsDoctorIDDELETE = function(xUID,doctorID) {
-  return new Promise(function(resolve, reject) {
+exports.doctorsDoctorIDDELETE = function (xUID, doctorID) {
+  return new Promise(function (resolve, reject) {
     resolve();
   });
 }
@@ -24,27 +24,27 @@ exports.doctorsDoctorIDDELETE = function(xUID,doctorID) {
  * doctorID String 
  * returns Doctor
  **/
-exports.doctorsDoctorIDGET = function(xUID,doctorID) {
-  return new Promise(function(resolve, reject) {
+exports.doctorsDoctorIDGET = function (xUID, doctorID) {
+  return new Promise(function (resolve, reject) {
     var examples = {};
     examples['application/json'] = {
-  "firstName" : "太郎",
-  "lastName" : "山田",
-  "doctorIconUrl" : "https://placehold.jp/150x150.png",
-  "chatSupportHours" : "9:00-17:00",
-  "phoneNumber" : "09012345678",
-  "callSupportHours" : "9:00-17:00",
-  "doctorID" : "1234567890",
-  "departments" : [ {
-    "departmentName" : "内科",
-    "departmentID" : "f47ac10b-58cc-4372-a567-0e02b2c3d479"
-  }],
-  "hospital" : {
-    "hospitalID" : "f47ac10b-58cc-4372-a567-0e02b2c3d479",
-    "hospitalName" : "東京都立大学病院"
-  },
-  "email" : "sample@mail.com"
-};
+      "firstName": "太郎",
+      "lastName": "山田",
+      "doctorIconUrl": "https://placehold.jp/150x150.png",
+      "chatSupportHours": "9:00-17:00",
+      "phoneNumber": "09012345678",
+      "callSupportHours": "9:00-17:00",
+      "doctorID": "1234567890",
+      "departments": [{
+        "departmentName": "内科",
+        "departmentID": "f47ac10b-58cc-4372-a567-0e02b2c3d479"
+      }],
+      "hospital": {
+        "hospitalID": "f47ac10b-58cc-4372-a567-0e02b2c3d479",
+        "hospitalName": "東京都立大学病院"
+      },
+      "email": "sample@mail.com"
+    };
     if (Object.keys(examples).length > 0) {
       resolve(examples[Object.keys(examples)[0]]);
     } else {
@@ -63,21 +63,21 @@ exports.doctorsDoctorIDGET = function(xUID,doctorID) {
  * xUID String 
  * returns DoctorResponse
  **/
-exports.doctorsDoctorIDPUT = function(body,doctorID,xUID) {
-  return new Promise(function(resolve, reject) {
+exports.doctorsDoctorIDPUT = function (body, doctorID, xUID) {
+  return new Promise(function (resolve, reject) {
     var examples = {};
     examples['application/json'] = {
-  "doctorName" : "山田 太郎",
-  "doctorIconUrl" : "https://placehold.jp/150x150.png",
-  "phoneNumber" : "09012345678",
-  "hospitalID" : "f47ac10b-58cc-4372-a567-0e02b2c3d479",
-  "chatSupportEndHour" : "17:00",
-  "callSupportStartHour" : "9:00",
-  "departments" : [ "f47ac10b-58cc-4372-a567-0e02b2c3d479" ],
-  "chatSupportStartHour" : "9:00",
-  "callSupportEndHour" : "17:00",
-  "email" : "sample@mail.com"
-};
+      "doctorName": "山田 太郎",
+      "doctorIconUrl": "https://placehold.jp/150x150.png",
+      "phoneNumber": "09012345678",
+      "hospitalID": "f47ac10b-58cc-4372-a567-0e02b2c3d479",
+      "chatSupportEndHour": "17:00",
+      "callSupportStartHour": "9:00",
+      "departments": ["f47ac10b-58cc-4372-a567-0e02b2c3d479"],
+      "chatSupportStartHour": "9:00",
+      "callSupportEndHour": "17:00",
+      "email": "sample@mail.com"
+    };
     if (Object.keys(examples).length > 0) {
       resolve(examples[Object.keys(examples)[0]]);
     } else {
@@ -96,29 +96,29 @@ exports.doctorsDoctorIDPUT = function(body,doctorID,xUID) {
  * hospitalName String 病院名の部分一致検索 (optional)
  * returns inline_response_200_1
  **/
-exports.doctorsGET = function(doctorName,departmentID,hospitalName) {
-  return new Promise(function(resolve, reject) {
+exports.doctorsGET = function (doctorName, departmentID, hospitalName) {
+  return new Promise(function (resolve, reject) {
     var examples = {};
     examples['application/json'] = {
-  "data" : [ {
-    "firstName" : "太郎",
-    "lastName" : "山田",
-    "doctorIconUrl" : "https://placehold.jp/150x150.png",
-    "chatSupportHours" : "9:00-17:00",
-    "phoneNumber" : "09012345678",
-    "callSupportHours" : "9:00-17:00",
-    "doctorID" : "1234567890",
-    "departments" : [ {
-      "departmentName" : "内科",
-      "departmentID" : "f47ac10b-58cc-4372-a567-0e02b2c3d479"
-    }],
-    "hospital" : {
-      "hospitalID" : "f47ac10b-58cc-4372-a567-0e02b2c3d479",
-      "hospitalName" : "東京都立大学病院"
-    },
-    "email" : "sample@mail.com"
-  }]
-};
+      "data": [{
+        "firstName": "太郎",
+        "lastName": "山田",
+        "doctorIconUrl": "https://placehold.jp/150x150.png",
+        "chatSupportHours": "9:00-17:00",
+        "phoneNumber": "09012345678",
+        "callSupportHours": "9:00-17:00",
+        "doctorID": "1234567890",
+        "departments": [{
+          "departmentName": "内科",
+          "departmentID": "f47ac10b-58cc-4372-a567-0e02b2c3d479"
+        }],
+        "hospital": {
+          "hospitalID": "f47ac10b-58cc-4372-a567-0e02b2c3d479",
+          "hospitalName": "東京都立大学病院"
+        },
+        "email": "sample@mail.com"
+      }]
+    };
     if (Object.keys(examples).length > 0) {
       resolve(examples[Object.keys(examples)[0]]);
     } else {
@@ -136,21 +136,21 @@ exports.doctorsGET = function(doctorName,departmentID,hospitalName) {
  * xUID String 
  * returns DoctorResponse
  **/
-exports.doctorsPOST = function(body,xUID) {
-  return new Promise(function(resolve, reject) {
+exports.doctorsPOST = function (body, xUID) {
+  return new Promise(function (resolve, reject) {
     var examples = {};
     examples['application/json'] = {
-  "doctorName" : "山田 太郎",
-  "doctorIconUrl" : "https://placehold.jp/150x150.png",
-  "phoneNumber" : "09012345678",
-  "hospitalID" : "f47ac10b-58cc-4372-a567-0e02b2c3d479",
-  "chatSupportEndHour" : "17:00",
-  "callSupportStartHour" : "9:00",
-  "departments" : [ "f47ac10b-58cc-4372-a567-0e02b2c3d479" ],
-  "chatSupportStartHour" : "9:00",
-  "callSupportEndHour" : "17:00",
-  "email" : "sample@mail.com"
-};
+      "doctorName": "山田 太郎",
+      "doctorIconUrl": "https://placehold.jp/150x150.png",
+      "phoneNumber": "09012345678",
+      "hospitalID": "f47ac10b-58cc-4372-a567-0e02b2c3d479",
+      "chatSupportEndHour": "17:00",
+      "callSupportStartHour": "9:00",
+      "departments": ["f47ac10b-58cc-4372-a567-0e02b2c3d479", "f47ac10b-58cc-4372-a567-0e02b2c3d479"],
+      "chatSupportStartHour": "9:00",
+      "callSupportEndHour": "17:00",
+      "email": "sample@mail.com"
+    };
     if (Object.keys(examples).length > 0) {
       resolve(examples[Object.keys(examples)[0]]);
     } else {
@@ -168,52 +168,29 @@ exports.doctorsPOST = function(body,xUID) {
  * hospitalID String 
  * returns inline_response_200_1
  **/
-exports.hospitalsHospitalIDDoctorsGET = function(xUID,hospitalID) {
-  return new Promise(function(resolve, reject) {
+exports.hospitalsHospitalIDDoctorsGET = function (xUID, hospitalID) {
+  return new Promise(function (resolve, reject) {
     var examples = {};
     examples['application/json'] = {
-  "data" : [ {
-    "firstName" : "太郎",
-    "lastName" : "山田",
-    "doctorIconUrl" : "https://placehold.jp/150x150.png",
-    "chatSupportHours" : "9:00-17:00",
-    "phoneNumber" : "09012345678",
-    "callSupportHours" : "9:00-17:00",
-    "doctorID" : "1234567890",
-    "departments" : [ {
-      "departmentName" : "内科",
-      "departmentID" : "f47ac10b-58cc-4372-a567-0e02b2c3d479"
-    }, {
-      "departmentName" : "内科",
-      "departmentID" : "f47ac10b-58cc-4372-a567-0e02b2c3d479"
-    } ],
-    "hospital" : {
-      "hospitalID" : "f47ac10b-58cc-4372-a567-0e02b2c3d479",
-      "hospitalName" : "東京都立大学病院"
-    },
-    "email" : "sample@mail.com"
-  }, {
-    "firstName" : "太郎",
-    "lastName" : "山田",
-    "doctorIconUrl" : "https://placehold.jp/150x150.png",
-    "chatSupportHours" : "9:00-17:00",
-    "phoneNumber" : "09012345678",
-    "callSupportHours" : "9:00-17:00",
-    "doctorID" : "1234567890",
-    "departments" : [ {
-      "departmentName" : "内科",
-      "departmentID" : "f47ac10b-58cc-4372-a567-0e02b2c3d479"
-    }, {
-      "departmentName" : "内科",
-      "departmentID" : "f47ac10b-58cc-4372-a567-0e02b2c3d479"
-    } ],
-    "hospital" : {
-      "hospitalID" : "f47ac10b-58cc-4372-a567-0e02b2c3d479",
-      "hospitalName" : "東京都立大学病院"
-    },
-    "email" : "sample@mail.com"
-  } ]
-};
+      "data": [{
+        "firstName": "太郎",
+        "lastName": "山田",
+        "doctorIconUrl": "https://placehold.jp/150x150.png",
+        "chatSupportHours": "9:00-17:00",
+        "phoneNumber": "09012345678",
+        "callSupportHours": "9:00-17:00",
+        "doctorID": "1234567890",
+        "departments": [{
+          "departmentName": "内科",
+          "departmentID": "f47ac10b-58cc-4372-a567-0e02b2c3d479"
+        }],
+        "hospital": {
+          "hospitalID": "f47ac10b-58cc-4372-a567-0e02b2c3d479",
+          "hospitalName": "東京都立大学病院"
+        },
+        "email": "sample@mail.com"
+      }]
+    };
     if (Object.keys(examples).length > 0) {
       resolve(examples[Object.keys(examples)[0]]);
     } else {
